# blindroid

./: .gitattributes  .gitignore  BACKLOG.md  FEATURES.md  OSM_TILES_README.txt  PERF_AUDIT.md  ROADMAP.md  TEST_REPORT.md  blindroid-099.apk  blindroid-100.apk  blindroid-101.apk  blindroid-102.apk  blindroid-103.apk  blindroid-104.apk  blindroid-105.apk  blindroid-106.apk  blindroid-107.apk  blindroid-108.apk  blindroid-109.apk  blindroid-110.apk  blindroid-111.apk  blindroid-112.apk  blindroid-113.apk  blindroid-114.apk  blindroid-115.apk  blindroid-116.apk  blindroid-117.apk  blindroid-118.apk  blindroid-119.apk  blindroid-120.apk  blindroid-121.apk  blindroid-122.apk  blindroid-123.apk  blindroid-124.apk  blindroid-125.apk  blindroid-126.apk  blindroid-127.apk  blindroid-128.apk  blindroid-129.apk  blindroid-130.apk  (+53 more)
app/: build.gradle.kts  proguard-rules.pro
app/libs/: tensorflow-lite-api-2.14.0-no-namespace.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: blindreader.apk  map_point_select.html  map_select.html  (+4 more)
braillekeyboard/: BUILD.md  VALIDATION.md  build.gradle.kts
braillekeyboard/src/main/: AndroidManifest.xml
braillekeyboard/src/main/cpp/: CMakeLists.txt  braille_liblouis_jni.c
braillekeyboard/src/main/cpp/liblouis/liblouis/: metadata.c
docs/: AI_PRIVACY.md  AUDIT_2026-03-24.md  BLINDREADER_BACKLOG.md  PLUGIN_API.md  roadmap.md
launcher/: build.gradle.kts
launcher/src/main/: AndroidManifest.xml
scripts/: augment_nbp_pln.py  build_blindreader.sh  build_rhvoice.sh  download_nbp_pln.py  publish_release.sh  train_pln_model.py
(+171 files in other folders)
